--- a/Bodega.css
+++ b/Bodega.css
@@ -93,7 +93,7 @@ transform: scale(1.05);
 
 /* --- Formulario (modal estilo ventana centrada) --- */
 .modal {
-    display: none;
+    display: flex;
     position: fixed;
     inset: 0;
     justify-content: center;
@@ -230,3 +230,4 @@ transform: scale(1.05);
     opacity: 1;
     transform: translateY(0);
 }
+
